# ez2d

./: .clang-format  .clangd  README.md  meson.build
client/: meson.build
common/: gui.hpp
server/: gui_server.hpp  interface.hpp  main.cpp  meson.build  sdl.cpp  sdl.hpp
src/: ez2d.cpp  meson.build
subprojects/: .gitignore
